Fixed this weird gap due to the offsets where no nav menu item was lit up.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -328,3 +328,8 @@ a {
 .black_active:hover {
 	background: black;
 }
+
+.gap {
+	background: black;
+	color: white;
+}
